--- a/core/package.json
+++ b/core/package.json
@@ -17,6 +17,7 @@
     "@truffle/hdwallet-provider": "^2.1.15",
     "dotenv": "^16.4.5",
     "fs": "^0.0.1-security",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "truffle-plugin-verify": "^0.6.7"
   }
 }
