--- a/periphery/package.json
+++ b/periphery/package.json
@@ -18,6 +18,7 @@
     "@uniswap/v2-core": "^1.0.1",
     "dotenv": "^16.4.5",
     "fs": "^0.0.1-security",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "truffle-plugin-verify": "^0.6.7"
   }
 }
